@@ -3,6 +3,10 @@ Hexen II: Hammer of Thyrion
 Development Progress	:
 ---------------------------
 
+2014-11-22 (SVN):
+    * gl_screen.c (SCR_ScreenShot_f): make sure we don't Sys_Error()
+      due to buffer allocation failures.
+
 2014-10-20 (SVN):
     * fix issues on Windows systems with DPI scaling.
     * bumped the version date stamp to 2014-10-20.
